--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap CSS -->
     <link href="app-assets/css/bootstrap.min.css" rel="stylesheet">
 
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!-- Font Awesome CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     
@@ -31,7 +34,7 @@
   </head>
   <body>
  
-    <div id="root"></div>
+  <div id="root"></div>
 
 
   </body>
