--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="app-assets/css/style.css"> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Kissan Khata</title>
+    <title>khata Darpan</title>
 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
